docs: clarify code block comments
I actually had to pause after reading this code comment on the front page:

```ts
// Telefunction arguments are automatically validated
// at runtime: `text` is guaranteed to be a string.
```

I wasn't sure if a single sentence was split on two lines,
or if the 2nd line started a new sentence
(which would be almost gibberish; hence the pause)

Changing the colon to a comma + "so"
makes the sentence unambiguous IMO

--- a/docs/pages/index/CodePreviewBlockLeft.mdx
+++ b/docs/pages/index/CodePreviewBlockLeft.mdx
@@ -9,7 +9,7 @@ export { onNewTodo }
 import { getContext } from 'telefunc'
 
 // Telefunction arguments are automatically validated
-// at runtime: `text` is guaranteed to be a string.
+// at runtime, so `text` is guaranteed to be a string.
 async function onNewTodo(text: string) {
   const { user } = getContext()
 
