--- a/docs/pages/index/CodePreviewBlockRight.mdx
+++ b/docs/pages/index/CodePreviewBlockRight.mdx
@@ -2,8 +2,8 @@
 // CreateTodo.tsx
 // Environment: client
 
-// CreateTodo.telefunc.ts isn't actually loaded: Tele-
-// func transforms it into a thin HTTP client.
+// CreateTodo.telefunc.ts isn't actually loaded;
+// Telefunc transforms it into a thin HTTP client.
 import { onNewTodo } from './CreateTodo.telefunc.ts'
 
 async function onClick(form) {
