--- a/docs/pages/getContext/+Page.mdx
+++ b/docs/pages/getContext/+Page.mdx
@@ -38,15 +38,15 @@ import { telefunc } from 'telefunc'
 // Telefunc middleware
 app.all('/_telefunc', async (req, res) => {
   // Authentication middlewares (e.g. Passport.js or Grant) usually provide information
-  // about the logged-in user on the `req` object.
+  // about the logged-in user on the `req` object:
   const user = req.user
   // Or when using a third-party authentication provider (e.g. Auth0):
   const user = await authProviderApi.getUser(req.headers)
 
   const httpResponse = await telefunc({
-    // We provide the context object here
+    // We provide the context object here:
     context: {
-      user
+      user,
     },
     url: req.url,
     method: req.method,
